--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             </div>
         </div>
     </div>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
